--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -9,4 +9,7 @@
     <item
         android:id="@+id/nav_logout"
         android:title="Logout" />
+    <item
+        android:id="@+id/nav_profile"
+        android:title="Profile" />
 </menu> 
